# Lumina

./: .gitattributes  .gitignore  .luarc.json  LICENSE  README.md  release.ps1  release.sh
.github/workflows/: build.yml  codeql.yml  rust-security.yml
scripts/: build-sidecars.ps1  build-sidecars.sh  init.lua
src/: App.razor  Program.cs  _Imports.razor  tauri-browser.csproj
src-go/: go.mod  main.go
src-kip/: Cargo.toml  README.md  kip.cabal  main.rs  package.yaml  test_input.kip
src-kip/.stack-work/: stack.sqlite3
src-kip/app/: Main.hs
src-sidekick/: .env.example  LuminaSidekick.spec  build.bat  main.py  nuitka-crash-report.xml  requirements.txt
src-sidekick/models/: README.txt
src-tauri/: Cargo.toml  build.rs  store.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: data.rs  history_manager.rs  lib.rs  main.rs  security.rs
src-zig/: build.zig  main.zig
src/Components/: CommandPalette.razor  Toast.razor
src/Components/Browser/: FindBar.razor  IncognitoToggle.razor  OmniBox.razor  TabBar.razor  ZoomControl.razor
src/Models/: AdditionalModels.cs  BrowserModels.cs  StoreItem.cs  SuggestionItem.cs
src/Pages/: Flags.razor  Home.razor  Store.razor
src/Properties/: launchSettings.json
src/Services/: TauriService.cs
src/wwwroot/: error.html  index.html
src/wwwroot/css/: app.css
