[package]
name = "lumina-browser"
version = "0.3.1"
description = "A next-generation browser built with Tauri and Blazor"
authors = ["Nazim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.43"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
url = "2.5.8"
image = "0.24"
adblock = { version = "0.12.1", default-features = false, features = ["full-regex-handling", "embedded-domain-resolver"] }
tauri-plugin-global-shortcut = "2.3.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
base64 = "0.22.1"
tauri-plugin-deep-link = "2.4.6"
tauri-plugin-shell = "2.3.4"

